--- a/dacon/data/test_efficientnetb0.ipynb
+++ b/dacon/data/test_efficientnetb0.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2b0d9b68-7102-4eca-9543-3b9b8acafc6e",
    "metadata": {},
    "outputs": [],
@@ -45,18 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d13862e3-bb27-47af-9b58-a9fbf804df71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mps:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "device = torch.device('mps:0' if torch.backends.mps.is_available() else 'cpu')\n",
@@ -73,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c3367399-9798-4e38-967b-fd2320b9a2b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "CFG = {\n",
     "    'IMG_SIZE':640,\n",
-    "    'EPOCHS':10,\n",
-    "    'LEARNING_RATE':3e-4,\n",
+    "    'EPOCHS':100,\n",
+    "    'LEARNING_RATE':1e-3,\n",
     "    'BATCH_SIZE':32,\n",
     "    'SEED':41\n",
     "}"
@@ -97,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "101a714b-71b6-4475-a4ce-fa5f98bc2731",
    "metadata": {},
    "outputs": [],
@@ -124,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a62c78cd-4f40-4e98-b8a6-1b6f1d906b4d",
    "metadata": {},
    "outputs": [],
@@ -134,25 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e664c085",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3457\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(all_img_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4119733d-adef-436c-afca-4112a9225d33",
    "metadata": {},
    "outputs": [],
@@ -164,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4db41c93-3515-4fcd-936b-0a01f5388b3f",
    "metadata": {},
    "outputs": [],
@@ -174,32 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "15d23f96",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        녹오염\n",
-       "1        녹오염\n",
-       "2        녹오염\n",
-       "3        녹오염\n",
-       "4        녹오염\n",
-       "          ...    \n",
-       "3452    틈새과다\n",
-       "3453    틈새과다\n",
-       "3454    틈새과다\n",
-       "3455    틈새과다\n",
-       "3456    틈새과다\n",
-       "Name: label, Length: 3457, dtype: object"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['label']"
    ]
@@ -214,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6c8c5916-8065-4b5c-aa37-f3fb2b9fa422",
    "metadata": {},
    "outputs": [],
@@ -234,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "16fd60a5-24e2-4539-bfd0-1c374a641699",
    "metadata": {},
    "outputs": [],
@@ -265,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "340b4a8b-5d6c-413f-b8b6-066e91a660e5",
    "metadata": {},
    "outputs": [],
@@ -305,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9d880481-1965-499d-9caa-fdfa8526f789",
    "metadata": {},
    "outputs": [],
@@ -327,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3664c4d0-f1f2-4971-9090-4d6ee66309ae",
    "metadata": {},
    "outputs": [],
@@ -354,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a17df6b3-16c9-44dd-b0fd-ffb501fee749",
    "metadata": {},
    "outputs": [],
@@ -369,7 +331,7 @@
     "    for epoch in tqdm(range(1, CFG['EPOCHS']+1)):\n",
     "        model.train()\n",
     "        train_loss = []\n",
-    "        for imgs, labels in tqdm(iter(train_loader)):\n",
+    "        for imgs, labels in (iter(train_loader)):\n",
     "            imgs = imgs.float().to(device)\n",
     "            labels = labels.to(device)\n",
     "            \n",
@@ -399,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "96b1c524-89fb-4ce8-a49f-067fd489f84a",
    "metadata": {},
    "outputs": [],
@@ -439,378 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "86142d9a-68b7-4d04-8423-49d28025411d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34e9ce1b06c340b4b29a9523920592ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7906da951d2f46c0a51e9d7382b64805",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97395a8035b24d57804210d54996f50c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1], Train Loss : [1.70841] Val Loss : [1.21143] Val Weighted F1 Score : [0.56010]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1923eaeeddab4662a47b506e903e4fbd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "100331cb16124753a727968688f4209b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [2], Train Loss : [1.09242] Val Loss : [1.10699] Val Weighted F1 Score : [0.61003]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ce10ff9924448adaadfee861e3f3eec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22e32d7060d548958f25d770456ef747",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [3], Train Loss : [0.83755] Val Loss : [1.01125] Val Weighted F1 Score : [0.64353]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5308a13d8af64117b414723149bc1f72",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a738e07461141c1bb6332d33abc84f6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [4], Train Loss : [0.61288] Val Loss : [1.18982] Val Weighted F1 Score : [0.60417]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7609ad665b4c403e8d9b196a92d4c996",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d1a3bb5af3f416cbebe297e4d923695",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [5], Train Loss : [0.50071] Val Loss : [1.17556] Val Weighted F1 Score : [0.66681]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f01f9a0ae3548ef9a6bb98ae528ba61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8197bfaf731b4787a1be25d376a703cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [6], Train Loss : [0.42431] Val Loss : [1.23706] Val Weighted F1 Score : [0.65198]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d31f68c14d44d54a10aea5e5943fcad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3429575f20f41de9bb75c753fa901e1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [7], Train Loss : [0.35820] Val Loss : [1.14051] Val Weighted F1 Score : [0.67904]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "986f0fd3172c4a8cb2562b9481b80bab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db663fbf08994a9192988381745918ba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [8], Train Loss : [0.31569] Val Loss : [1.68368] Val Weighted F1 Score : [0.60961]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0db1a4c227984beaafae05eab9abbeaf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a87d2cbbac96400fb6059fcb81472d82",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [9], Train Loss : [0.24393] Val Loss : [1.36628] Val Weighted F1 Score : [0.66514]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6550ea6a7ea24d31a238b69ef5a179f7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/76 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e1b40f34c3e4a63a678d56b011a4e82",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/33 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [10], Train Loss : [0.24940] Val Loss : [1.61551] Val Weighted F1 Score : [0.62941]\n",
-      "Epoch 00010: reducing learning rate of group 0 to 1.5000e-04.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = BaseModel()\n",
     "model.eval()\n",
@@ -830,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0ed16d0e-61ee-4737-b90a-3842860cc40a",
    "metadata": {},
    "outputs": [],
@@ -840,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "dbbf9ae5-9d8c-4800-a809-63094a1e9a24",
    "metadata": {},
    "outputs": [],
@@ -851,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "378fd3a9-76d8-4c9a-81a1-c6a48492684c",
    "metadata": {},
    "outputs": [],
@@ -873,25 +469,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2866935c-407d-4919-a58b-1f8feaa66a2a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eef0bfc2d70741afbe121309c20596b0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/25 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = inference(infer_model, test_loader, device)"
    ]
@@ -906,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "fc864be2-c306-4ad0-aa97-1d5ab5ea9811",
    "metadata": {},
    "outputs": [],
@@ -916,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a472198d-6a2f-4d97-b45b-55031d6019a8",
    "metadata": {},
    "outputs": [],
@@ -926,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "0e3e0511-2ce0-4658-893f-0f3641c50bb8",
    "metadata": {},
    "outputs": [],
