--- a/dacon/src/ensemble.ipynb
+++ b/dacon/src/ensemble.ipynb
@@ -60,9 +60,51 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet50-0676ba61.pth\" to C:\\Users\\lee97/.cache\\torch\\hub\\checkpoints\\resnet50-0676ba61.pth\n",
+      "100%|██████████| 97.8M/97.8M [00:02<00:00, 40.8MB/s]\n",
+      "Downloading: \"https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-weights/efficientnet_b2_ra-bcdf34b7.pth\" to C:\\Users\\lee97/.cache\\torch\\hub\\checkpoints\\efficientnet_b2_ra-bcdf34b7.pth\n",
+      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to C:\\Users\\lee97/.cache\\torch\\hub\\checkpoints\\vgg16-397923af.pth\n",
+      "100%|██████████| 528M/528M [00:14<00:00, 37.1MB/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "class EnsembleModel(nn.Module):\n",
+    "    def __init__(self, num_classes):\n",
+    "        super(EnsembleModel, self).__init__()\n",
+    "        self.resnet = models.resnet50(pretrained=True)\n",
+    "        self.efficientnet = timm.create_model('efficientnet_b2', pretrained=True)\n",
+    "        self.vgg = models.vgg16(pretrained=True)\n",
+    "        self.avgpool = nn.AdaptiveAvgPool2d(output_size=(1, 1))\n",
+    "        self.fc = nn.Linear(2048, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x1 = self.resnet(x)\n",
+    "        x2 = self.efficientnet(x)\n",
+    "        x3 = self.vgg(x)\n",
+    "        x = torch.cat((x1, x2, x3), dim=1)\n",
+    "        x = self.avgpool(x)\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.fc(x)\n",
+    "        return x\n",
+    "\n",
+    "# 앙상블 모델 생성\n",
+    "num_classes = 19 # 분류할 클래스 수\n",
+    "model = EnsembleModel(num_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model = timm.create_model(\"resnet50\", pretrained = True, num_classes = 19).to(device)\n",
+    "# model = timm.create_model(\"resnet50\", pretrained = True, num_classes = 19).to(device)\n",
     "\n",
     "le = preprocessing.LabelEncoder()\n",
     "optimizer = optim.Adam(model.parameters(), lr = LR)\n",
