--- a/dacon/src/ensemble.ipynb
+++ b/dacon/src/ensemble.ipynb
@@ -60,47 +60,34 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/resnet50-0676ba61.pth\" to C:\\Users\\lee97/.cache\\torch\\hub\\checkpoints\\resnet50-0676ba61.pth\n",
-      "100%|██████████| 97.8M/97.8M [00:02<00:00, 40.8MB/s]\n",
-      "Downloading: \"https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-weights/efficientnet_b2_ra-bcdf34b7.pth\" to C:\\Users\\lee97/.cache\\torch\\hub\\checkpoints\\efficientnet_b2_ra-bcdf34b7.pth\n",
-      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to C:\\Users\\lee97/.cache\\torch\\hub\\checkpoints\\vgg16-397923af.pth\n",
-      "100%|██████████| 528M/528M [00:14<00:00, 37.1MB/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class EnsembleModel(nn.Module):\n",
     "    def __init__(self, num_classes):\n",
-    "        super(EnsembleModel, self).__init__()\n",
-    "        self.resnet = models.resnet50(pretrained=True)\n",
-    "        self.efficientnet = timm.create_model('efficientnet_b2', pretrained=True)\n",
-    "        self.vgg = models.vgg16(pretrained=True)\n",
-    "        self.avgpool = nn.AdaptiveAvgPool2d(output_size=(1, 1))\n",
-    "        self.fc = nn.Linear(2048, num_classes)\n",
-    "\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        # resnet50\n",
+    "        self.resnet50 = models.resnet50(pretrained=True)\n",
+    "        num_features = self.resnet50.fc.in_features\n",
+    "        self.resnet50.fc = nn.Linear(num_features, num_classes)\n",
+    "        \n",
+    "        # efficientnet_b2\n",
+    "        self.effnet = timm.create_model('efficientnet_b2', pretrained=True, num_classes=num_classes)\n",
+    "        \n",
     "    def forward(self, x):\n",
-    "        x1 = self.resnet(x)\n",
-    "        x2 = self.efficientnet(x)\n",
-    "        x3 = self.vgg(x)\n",
-    "        x = torch.cat((x1, x2, x3), dim=1)\n",
-    "        x = self.avgpool(x)\n",
-    "        x = torch.flatten(x, 1)\n",
-    "        x = self.fc(x)\n",
+    "        x1 = self.resnet50(x)\n",
+    "        x2 = self.effnet(x)\n",
+    "        x = (x1 + x2) / 2\n",
     "        return x\n",
     "\n",
     "# 앙상블 모델 생성\n",
     "num_classes = 19 # 분류할 클래스 수\n",
-    "model = EnsembleModel(num_classes)"
+    "model = EnsembleModel(num_classes).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "CFG = {\n",
-    "    'IMG_SIZE':640,\n",
+    "    'IMG_SIZE':440,\n",
     "    'EPOCHS':50,\n",
     "    'LEARNING_RATE':1e-3,\n",
-    "    'BATCH_SIZE':8,\n",
+    "    'BATCH_SIZE':1,\n",
     "    'SEED':41\n",
     "}\n",
     "EPOCH = CFG['EPOCHS']\n",
@@ -149,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,9 +165,7 @@
     "        img_path = self.img_path_list[index]\n",
     "        \n",
     "        image = cv2.imread(img_path)\n",
-    "        print(img_path)\n",
-    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "        \n",
+    "        image = cv2.cvtColor(image, cv2.COLOR_BGRA2RGB)\n",
     "        if self.transforms is not None:\n",
     "            image = self.transforms(image=image)['image']\n",
     "        \n",
@@ -196,8 +181,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# transform & train valid test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,13 +198,16 @@
     "                            A.HorizontalFlip(p=0.5),\n",
     "                            A.RandomBrightnessContrast(p=0.2),\n",
     "                            A.Rotate(limit=15),\n",
-    "                            A.Resize(440, 440),\n",
+    "                            A.Resize(CFG['IMG_SIZE'], CFG['IMG_SIZE']),\n",
     "                            A.OneOf([\n",
     "                                A.GaussianBlur(blur_limit=3, p=0.2),\n",
     "                                A.MotionBlur(blur_limit=3, p=0.2),\n",
     "                                A.MedianBlur(blur_limit=3, p=0.1)\n",
     "                            ], p=0.5),\n",
-    "                            A.CLAHE(clip_limit=2.0, p=0.2),\n",
+    "                            A.OneOf([\n",
+    "                                A.CLAHE(clip_limit=2, p=0.2),\n",
+    "                                A.RandomBrightnessContrast(),\n",
+    "                            ], p=0.5),\n",
     "                            A.OneOf([\n",
     "                                A.RandomBrightness(p=0.5),\n",
     "                                A.RandomContrast(p=0.5),\n",
@@ -224,6 +220,7 @@
     "                            ToTensorV2()\n",
     "])\n",
     "\n",
+    "\n",
     "test_transform = A.Compose([\n",
     "                            A.Resize(CFG['IMG_SIZE'],CFG['IMG_SIZE']),\n",
     "                            A.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225), max_pixel_value=255.0, always_apply=False, p=1.0),\n",
@@ -233,12 +230,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16,  2,  1, ..., 10, 10, 12])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset = CustomDataset(train['img_path'].values, train['label'].values, train_transform)\n",
+    "\n",
+    "train_dataset.label_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dataset = CustomDataset(train['img_path'].values, train['label'].values, train_transform)\n",
-    "train_loader = DataLoader(train_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=False, num_workers=0)\n",
+    "\n",
+    "train_targets = train_dataset.label_list\n",
+    "class_count = torch.tensor([len(np.where(train_targets==t)[0]) for t in range(19)])\n",
+    "weight = 1. / class_count.float()\n",
+    "samples_weight = torch.tensor([weight[t] for t in train_targets])\n",
+    "sampler = WeightedRandomSampler(samples_weight, len(samples_weight))\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=False, num_workers=0, sampler=sampler)\n",
     "\n",
     "val_dataset = CustomDataset(val['img_path'].values, val['label'].values, test_transform)\n",
     "val_loader = DataLoader(val_dataset, batch_size=CFG['BATCH_SIZE'], shuffle=False, num_workers=0)"
@@ -246,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,51 +369,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0c081c37a0946ff84975323d9cb900d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/303 [00:00<?, ?batch/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data/train/훼손/878.png\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.7.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m infer_model \u001b[39m=\u001b[39m train(model, optimizer, train_loader, val_loader, scheduler)\n",
-      "Cell \u001b[1;32mIn[8], line 39\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(model, optimizer, train_loader, val_loader, scheduler)\u001b[0m\n\u001b[0;32m     37\u001b[0m train_loss \u001b[39m=\u001b[39m []\n\u001b[0;32m     38\u001b[0m \u001b[39mwith\u001b[39;00m tqdm(train_loader, unit\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbatch\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m tepoch:\n\u001b[1;32m---> 39\u001b[0m     \u001b[39mfor\u001b[39;00m imgs, labels \u001b[39min\u001b[39;00m tepoch:\n\u001b[0;32m     40\u001b[0m         batch \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     41\u001b[0m         optimizer\u001b[39m.\u001b[39mzero_grad()\n",
-      "File \u001b[1;32mc:\\Users\\lee97\\anaconda3\\envs\\lens\\lib\\site-packages\\tqdm\\notebook.py:254\u001b[0m, in \u001b[0;36mtqdm_notebook.__iter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    252\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    253\u001b[0m     it \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39m(tqdm_notebook, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__iter__\u001b[39m()\n\u001b[1;32m--> 254\u001b[0m     \u001b[39mfor\u001b[39;00m obj \u001b[39min\u001b[39;00m it:\n\u001b[0;32m    255\u001b[0m         \u001b[39m# return super(tqdm...) will not catch exception\u001b[39;00m\n\u001b[0;32m    256\u001b[0m         \u001b[39myield\u001b[39;00m obj\n\u001b[0;32m    257\u001b[0m \u001b[39m# NB: except ... [ as ...] breaks IPython async KeyboardInterrupt\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\lee97\\anaconda3\\envs\\lens\\lib\\site-packages\\tqdm\\std.py:1178\u001b[0m, in \u001b[0;36mtqdm.__iter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1175\u001b[0m time \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_time\n\u001b[0;32m   1177\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 1178\u001b[0m     \u001b[39mfor\u001b[39;00m obj \u001b[39min\u001b[39;00m iterable:\n\u001b[0;32m   1179\u001b[0m         \u001b[39myield\u001b[39;00m obj\n\u001b[0;32m   1180\u001b[0m         \u001b[39m# Update and possibly print the progressbar.\u001b[39;00m\n\u001b[0;32m   1181\u001b[0m         \u001b[39m# Note: does not call self.update(1) for speed optimisation.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\lee97\\anaconda3\\envs\\lens\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:634\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    631\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    632\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[0;32m    633\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[1;32m--> 634\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[0;32m    635\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    636\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    637\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    638\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[1;32mc:\\Users\\lee97\\anaconda3\\envs\\lens\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:678\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    676\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m    677\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m--> 678\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m    679\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[0;32m    680\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[1;32mc:\\Users\\lee97\\anaconda3\\envs\\lens\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:51\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[1;34m(self, possibly_batched_index)\u001b[0m\n\u001b[0;32m     49\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset\u001b[39m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[0;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 51\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     52\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     53\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[1;32mc:\\Users\\lee97\\anaconda3\\envs\\lens\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:51\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     49\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset\u001b[39m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[0;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 51\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     52\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     53\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "Cell \u001b[1;32mIn[5], line 27\u001b[0m, in \u001b[0;36mCustomDataset.__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m     25\u001b[0m image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mimread(img_path)\n\u001b[0;32m     26\u001b[0m \u001b[39mprint\u001b[39m(img_path)\n\u001b[1;32m---> 27\u001b[0m image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mcvtColor(image, cv2\u001b[39m.\u001b[39;49mCOLOR_BGR2RGB)\n\u001b[0;32m     29\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransforms \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     30\u001b[0m     image \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransforms(image\u001b[39m=\u001b[39mimage)[\u001b[39m'\u001b[39m\u001b[39mimage\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.7.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n"
-     ]
-    }
-   ],
+   "source": [
+    "# infer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "infer_model = train(model, optimizer, train_loader, val_loader, scheduler)"
    ]
